-
Bug
-
Resolution: Done
-
P2: Important
-
5.5.0
-
None
-
f5885f71fd80bd1953c3be5e48dd1ad4fb1af9a1
When generating Makefile code for Info.plist on MAC, qmake does not resolve spaces in the bundle path when checking and creating path to Info.plist
Example Makefile:
... ../my_repo/My\ app.app/Contents/Info.plist: @test -d ../my_repo/My app.app/Contents/Info.plist || mkdir -p ../my_repo/My\ app.app/Contents/Info.plist ...
Check that in "test -d" dir name is not escape quoted.
The problem is in this line of code:
t << mkdir_p_asstring(destdir, false) << "\n\t";
It should be:
t << mkdir_p_asstring(destdir) << "\n\t";
or:
t << mkdir_p_asstring(destdir, true) << "\n\t";
For Gerrit Dashboard: QTBUG-47775 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
123552,2 | fix quoting in plist creation | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |