fix quoting in plist creation

unlike everywhere else in this file, destdir is not pre-quoted here.

Task-number: QTBUG-47775
Change-Id: Ia5b0c56bbdd3eb095f81b0f615d68a338ffa52c5
Reviewed-by: Joerg Bornemann <joerg.bornemann@theqtcompany.com>

cregit: f5885f71fd80bd1953c3be5e48dd1ad4fb1af9a1 https://github.com/qt/qtbase/commit/f5885f71fd80bd1953c3be5e48dd1ad4fb1af9a1